fixed buttons, alignment

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ html, body {
 }
 
 .index-button {
-    border: .2rem solid #30343f; 
+    border: .1rem solid #30343f; 
     font-family: 'assistant';
     color: #30343f;
     background: #fbfbfb;
@@ -51,7 +51,8 @@ html, body {
 }
 
 .index-button:hover {
-    font-size: 1.7rem;
+/*    font-size: 1.7rem;*/
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .bio-button {
@@ -67,6 +68,12 @@ html, body {
     margin: .5rem;
     min-width: 160px;
     max-width: 200px;
+}
+
+.bio-button:hover {
+    background-color: #006494;
+    color: #FBFBFB;
+    text-decoration: none;
 }
 
 
@@ -195,6 +202,7 @@ p {
     width: 100%;
     background-position: center 35%;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 h1.my-name {
@@ -249,6 +257,23 @@ h5.tagline {
     padding-bottom: 20px;
 }
 
+/*
+.project-brainspace-logo {
+    text-align: center;
+    background-image: url("../assets/brainspace-background.png");
+    justify-items: center;
+    overflow: hidden;
+    width: 100%;
+    margin: 0 auto;
+    height: 300px;
+  }
+
+.brainspace-logo {
+   padding-top: 10rem;
+   width: 50%;
+}
+*/
+
 .project-brainspace {
     text-align: center;
     background-image: url("../assets/brainspace-background.png");
@@ -257,23 +282,28 @@ h5.tagline {
     width: 100%;
     margin: 0 auto;
     height: 300px;
-    
-  }
-
-/*
-#bs-copy {
-    display: none;
+/*    visibility: hidden;*/
 }
-
-#bs-copy:hover .index-project-copy {
-    display: block;
-}
-*/
 
 .project-brainspace-copy {
   justify-content: center;
   padding: 4rem 3rem 2rem 3rem;
 }
+
+/*
+.project-brainspace-logo:hover {
+    visibility: hidden;
+}
+
+.project-brainspace-copy:hover {
+    visibility: visible;
+}
+
+.project-brainspace-copy {
+  justify-content: center;
+  padding: 4rem 3rem 2rem 3rem;
+}
+*/
 
 .project-outsafe {
     text-align: center;
@@ -322,6 +352,7 @@ h5.tagline {
     align-content: center;
     justify-content: center;
     padding-right: 0;
+    width: 100%;
 }
 
 .introduction  {
@@ -764,10 +795,6 @@ h5.persona-title {
     width: 100%;
 }
 
-.type-color {
-    display: flex;
-    flex-direction: column;
-}
 
 @media screen and (min-width: 575px) {
     .type-color {
@@ -797,7 +824,6 @@ h5.persona-title {
 .takeaways {
     margin: 0 auto;
     padding: 1rem 0;
-    list-style-type: circle;
 }
 
 .wireframe-case-study-section {
